# opensmtpd-filter-qdgrey

./: .gitignore  Cargo.toml  README.md  deny.toml  go.mod  go.sum  hardening.go  hardening_js.go  hardening_openbsd.go  main.go  redis.lua
.github/: dependabot.yml
.github/workflows/: format.yml  go.yml  licenses.yml  rust-update.yml  rust.yml  test.yml
src/: main.rs
tests/: Cargo.toml  integration_test.rs
tests/src/: lib.rs
